# ulipsync-profile-gen

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
src/: algorithm.rs  lib.rs  mfcc.rs
