
[package]
authors = ["Raven95676 <raven95676@gmail.com>"]
edition = "2021"
name = "ulipsync_profile_gen"
version = "1.0.0"
description = "Node.js library for generating uLipSync profile."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rustfft = "6.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
